--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,12 @@
     <!-- placehoders -->
     <string name="item_contact_placeholder_name">name</string>
     <string name="item_contact_placeholder_phone">phone</string>
+
+    <!-- UI names -->
     <string name="btn_del_duplicates_text">Delete doppelgangers</string>
+
+    <!-- MainActivity strings -->
+    <string name="deleted_duplicates">Удалено %1$d дубликатов</string>
+    <string name="no_duplicates_found">Дубликаты не найдены</string>
+    <string name="below_zero">Произошла неожиданная ошибка при удалении</string>
 </resources>
